# speld_meet

./: .gitignore  BACKENDS.md  README.md  pyproject.toml  setup.py
speld_meet/: appointment_hooks.py  controllers.py  hooks.py  mobile.py  modules.txt
speld_meet/doctype/meeting_participant/: meeting_participant.py
speld_meet/doctype/meeting_required_role/: meeting_required_role.json  meeting_required_role.py
speld_meet/public/js/: external_api.SHA256  external_api.js
speld_meet/setup/: install_jitsi.py
speld_meet/setup/templates/: jicofo.conf.j2  jvb.conf.j2  prosody.cfg.lua.j2  turnserver.conf.j2
speld_meet/speld_meet/doctype/meeting/: meeting.json  meeting.py
speld_meet/speld_meet/doctype/meeting_chat/: meeting_chat.json  meeting_chat.py
speld_meet/speld_meet/doctype/meeting_participant/: meeting_participant.json
speld_meet/www/: meet.html  meet.py  meet_index.html  meet_index.py  well_known_aasa.html  well_known_aasa.py  well_known_assetlinks.html  well_known_assetlinks.py
